[package]
name = "da_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.79", features = ["backtrace"] }
async-trait = "0.1.77"
aws-config = { version = "1.0.1", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.4.0", features = ["rt-tokio"] }
aws-sdk-sts = "1.17.0"
clap = { version = "4.4.18", default-features = false, features = ["std", "derive", "help", "usage", "string", "env"] }
governor = "0.6.0"
prost = "0.12.3"
redb = "1.0.5"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.8"
tokio = { version = "1.35.1", features = ["full", "sync"] }
tokio-stream = "0.1.15"
tonic = { version = "0.10.2", features = ["gzip", "tls", "tls-roots", "tls-roots-common", "tls-webpki-roots"] }
tonic-build = "0.10.2"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[build-dependencies]
anyhow = { version = "1.0.79", features = ["backtrace"] }
tonic-build = "0.10.2"

[dev-dependencies]
tempfile = "3.10.0"
